--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ Django==5.0.3
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
 gunicorn==20.0.4
+python-dotenv~=0.19.2
+psycopg2-binary==2.9.9
