--- a/.github/workflows/django-tests.yml
+++ b/.github/workflows/django-tests.yml
@@ -11,6 +11,28 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_USER: user_example
+          POSTGRES_PASSWORD: password_example
+          POSTGRES_DB: db_example
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    env:
+      DB_NAME: db_example
+      DB_USER: user_example
+      DB_PASSWORD: password_example
+      DB_HOST: localhost
+      DB_PORT: 5432
+      DEBUG: 'False'
+
     strategy:
       matrix:
         python-version: [3.10.x, 3.11, 3.12]
