--- a/.github/workflows/django-tests.yml
+++ b/.github/workflows/django-tests.yml
@@ -11,32 +11,13 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    services:
-      postgres:
-        image: postgres:16
-        env:
-          POSTGRES_USER: user_example
-          POSTGRES_PASSWORD: password_example
-          POSTGRES_DB: db_example
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
     env:
-      DB_NAME: db_example
-      DB_USER: user_example
-      DB_PASSWORD: password_example
-      DB_HOST: localhost
-      DB_PORT: 5432
       DEBUG: 'False'
 
     strategy:
       matrix:
-        python-version: [3.10.x, 3.11, 3.12]
-
+        python-version: ["3.10.x", 3.11, 3.12]
+    
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
@@ -47,6 +28,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: Configure SQLite
+        run: |
+          cp example.env .env
+          echo "DATABASE_URL=sqlite:///$(pwd)/db.sqlite3" >> .env
       - name: Run migrations
         run: python manage.py migrate
       - name: Run tests
