--- a/.github/workflows/django-tests.yml
+++ b/.github/workflows/django-tests.yml
@@ -12,12 +12,17 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
+      DB_NAME: ':memory:'
+      DB_USER: ''
+      DB_PASSWORD: ''
+      DB_HOST: ''
+      DB_PORT: ''
       DEBUG: 'False'
 
     strategy:
       matrix:
-        python-version: ["3.10.x", 3.11, 3.12]
-    
+        python-version: [3.10.x, 3.11, 3.12]
+
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
@@ -28,10 +33,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Configure SQLite
+      - name: Configure Django for SQLite
         run: |
-          cp example.env .env
-          echo "DATABASE_URL=sqlite:///$(pwd)/db.sqlite3" >> .env
+          sed -i "s/'ENGINE': 'django.db.backends.postgresql'/'ENGINE': 'django.db.backends.sqlite3'/g" your_project/settings.py
+          sed -i "s/'NAME': os.getenv('DB_NAME')/'NAME': ':memory:'/g" your_project/settings.py
       - name: Run migrations
         run: python manage.py migrate
       - name: Run tests
